<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Application</string>
    <string name="hello_world">Hello ssatta!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_title">Welcome</string>
    <string name="thisapp">This app runs some common sorting algorithms on a large array of random numbers every time you hit run.</string>
    <string name="randomnumbers">The times are listed as each algorithm completes and an average is saved over all the sessions</string>
    <string name="home_okay">OK</string>
    <string name="title_activity_algo">AlgoActivity</string>
    <string name="run_btn">Run</string>
    <string name="testname">a</string>
    <string name="title_activity_list_activity_example">ListActivityExample</string>
    <string name="runAlgoBtn">Test Speed</string>
    <string name="algonamecol">Algo Name</string>
    <string name="avg_col">Average Time</string>
    <string name="time_col">Time on this run</string>

</resources>
