<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/gridLayout"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:columnCount="1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:rowCount="3"
    tools:context="com.example.sattas.myapplication.ListActivityExample">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/runAlgoBtn" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/algoname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.5"
            android:width="0dp"
            android:gravity="center_vertical"
            android:text="@string/algonamecol"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/time_col"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.25"
            android:width="0dp"
            android:text="@string/time_col"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/avg_time_col"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.25"
            android:width="0dp"
            android:text="@string/avg_col"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/list_activity"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="fill"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@android:color/holo_blue_bright"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>

</GridLayout>
